# IU7-Analysis-of-Algorithms

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.sh
ci_scripts/: install-dependencies.sh
graph/: code.cpp  control_graph.graphml  information_graph.graphml  information_history.graphml  operating_history.graphml
lab_01/: .travis.yml  CMakeLists.txt  TimeDamM.csv  TimeDamR.csv  TimeLeven.csv  TimeResults.csv  damerau_leven_m.py  damerau_leven_r.py  lab_01.pro  leven.cpp  leven.py  levenshtein.cpp  levenshtein.h  main.cpp  release.py  report_01.tex  test.cpp  test.py  time.c  time.cpp  time.h  time_analyse.py  time_dam_m.txt  time_dam_r.txt  time_leven.txt
lab_01/report/: DamerauTime.csv  MatrixTime.csv  report_01.tex
lab_01/tests/: 0_empty_empty.txt  10_onedelete_end.txt  14_onetranspos_begin.txt  16_onetranspos_end.txt  1_empty_onechar.txt  20_sub_middle_insert.txt  21_sub_middle_delete.txt  22_sub_middle_replace.txt  23_sub_end_insert.txt  24_sub_end_delete.txt  25_sub_end_replace.txt  3_onechar_matched.txt  8_onedelete_begin.txt  9_onedelete_middle.txt  test (10).txt  test (12).txt  test (13).txt  test (14).txt  test (16).txt  test (17).txt  test (18).txt  test (19).txt  test (20).txt  test (24).txt  test (25).txt  test (3).txt  test (5).txt  test (6).txt  test (7).txt  test (8).txt
lab_02/: CMakeLists.txt  main.cpp  mamult.cpp  matrix.cpp  matrix.hpp  (+6 more)
lab_04/: CMakeLists.txt  main.cpp  mamult.cpp  mamult.hpp  matrix.cpp  matrix.hpp  test.cpp  time.cpp
lab_04/report/: TEvenTime.csv  TOddTime.csv  report_4.tex
(+50 files in other folders)
